[package]
name = "yew-markdown-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.16.0"
gloo-utils = "0.1.6"
serde = "1.0.152"
yaml-front-matter = "0.1.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
